[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tower-http = { version = "0.4", features = ["fs"] }
cuid2 = "0.1.2"

[dev-dependencies]
